<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/songs"
        style="@style/CategoryStyle"
        android:background="@color/category_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/songs" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff" />
    <TextView
        android:id="@+id/albums"
        style="@style/CategoryStyle"
        android:background="@color/category_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/albums"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff" />

    <TextView
        android:id="@+id/player"
        style="@style/CategoryStyle"
        android:background="@color/category_background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#fff" />



</LinearLayout>
